# fwtx-wiki-engine

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  reset_and_init.py  wiki.py
artifacts/: STRATEGY.md  TOP.md  plan.md
client/: index.html
client/css/: style.css
client/js/: app.js
data/: fwtx-charter.md  fwtx.json
docs/: RESEARCH_AGENT_SETUP.md  STRUCTURED_OUTPUT_GUIDE.md  TOP_COMPLIANCE_ASSESSMENT.md  TOP_IMPLEMENTATION_SUMMARY.md
examples/: structured_research.py
scripts/: README.md  init_top_data.py  reset_and_init.py  run_research.py  test_research_agent.py
src/: ascii_art.py  config.py  episodes.py
src/api/: chat.py  graph.py  research.py  search.py  sync.py
src/data/: governance.md
src/db/: falkor.py
src/middleware/: auth.py
src/models/: chat.py  graph.py  ontology.py  research.py  search.py  sync.py
src/models/top/: __init__.py  base.py  geographic.py  government.py  legal.py  political.py  relationships.py  structured.py
src/services/agent/: researcher.py
src/services/graphiti/: index.py  initial_sync.py  search_config.py
src/services/sync/: __init__.py  data_loader.py  fort_worth_data.py  scheduler.py  top_loader.py
tests/: test_top_implementation.py
